// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pseudo-class props should generate pseudo-class CSS 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.emotion-0:hover {
  color: rgb(2,99,224);
}

.emotion-0:active,
.emotion-0[data-active=true] {
  color: rgb(0,20,137);
}

.emotion-0:focus {
  color: rgb(3,11,93);
}

.emotion-0:visited {
  color: rgb(214,31,31);
}

.emotion-0:nth-of-type(even) {
  padding: 0.75rem;
}

.emotion-0:nth-of-type(odd) {
  margin: 0.5rem;
}

.emotion-0:disabled,
.emotion-0:disabled:focus,
.emotion-0:disabled:hover,
.emotion-0[aria-disabled=true],
.emotion-0[aria-disabled=true]:focus,
.emotion-0[aria-disabled=true]:hover {
  padding-top: 0.75rem;
}

.emotion-0:checked,
.emotion-0[aria-checked=true] {
  padding-right: 0.75rem;
}

.emotion-0:indeterminate,
.emotion-0[aria-checked=mixed] {
  padding-bottom: 0.75rem;
}

.emotion-0[aria-selected=true] {
  padding-left: 0.75rem;
}

.emotion-0:invalid,
.emotion-0[aria-invalid=true] {
  margin-top: 0.75rem;
}

.emotion-0[aria-pressed=true] {
  margin-right: 0.75rem;
}

.emotion-0[aria-readonly=true],
.emotion-0[readonly] {
  margin-bottom: 0.75rem;
}

.emotion-0:first-of-type {
  margin-left: 0.75rem;
}

.emotion-0:last-of-type {
  color: rgb(153,205,255);
}

.emotion-0[aria-expanded=true] {
  color: rgb(174,178,193);
}

.emotion-0[aria-grabbed=true] {
  color: rgb(14,124,58);
}

.emotion-0:not(:first-of-type) {
  color: rgb(141,49,24);
}

.emotion-0:not(:last-of-type) {
  color: rgb(141,49,24);
}

.emotion-0:before {
  content: "Before text";
  position: absolute;
  bottom: 0;
  left: 0;
}

.emotion-0:after {
  content: "After text";
  position: absolute;
  bottom: 0;
  left: 0;
}

.emotion-0:focus-within {
  color: rgb(96,107,133);
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      PseudoBox
    </span>
  </div>
</DocumentFragment>
`;

exports[`as should render as a provided HTML element 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<div
    class="emotion-1"
  >
    <label
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      background single
    </label>
  </div>
</DocumentFragment>
`;

exports[`color should set a color property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      color single
    </span>
  </div>
</DocumentFragment>
`;

exports[`color should set a responsive color property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(214,31,31);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    color: rgb(14,124,58);
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorTextError,colorTextSuccess"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      color responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`display should set a display property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: inline-block;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      display="inline-block"
      font-size="fontSize30"
    >
      display single
    </span>
  </div>
</DocumentFragment>
`;

exports[`display should set a responsive display property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: inline-block;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    display: block;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      display="inline-block,block"
      font-size="fontSize30"
    >
      display responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`fontFamily should set a font family property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-family: 'Fira Mono','Courier New',Courier,monospace;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-family="fontFamilyCode"
      font-size="fontSize30"
    >
      font family single
    </span>
  </div>
</DocumentFragment>
`;

exports[`fontFamily should set a responsive font family property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    font-family: 'Fira Mono','Courier New',Courier,monospace;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-family="fontFamilyText,fontFamilyCode"
      font-size="fontSize30"
    >
      font family responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`fontSize should set a font size property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.625rem;
  line-height: 1.25rem;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize10"
    >
      font size single
    </span>
  </div>
</DocumentFragment>
`;

exports[`fontSize should set a responsive font size property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.75rem;
  line-height: 1.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    font-size: 0.875rem;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize20,fontSize30"
    >
      font size responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`fontStyle should set a font style property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-style: italic;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
      font-style="italic"
    >
      font style single
    </span>
  </div>
</DocumentFragment>
`;

exports[`fontStyle should set a responsive font style property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-style: italic;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    font-style: normal;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
      font-style="italic,normal"
    >
      font style responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`fontWeight should set a font weight property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 700;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
      font-weight="fontWeightBold"
    >
      font weight single
    </span>
  </div>
</DocumentFragment>
`;

exports[`fontWeight should set a responsive font weight property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 400;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    font-weight: 600;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
      font-weight="fontWeightLight,fontWeightSemibold"
    >
      font weight responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`letterSpacing should set a letter spacing property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
      letter-spacing="1px"
    >
      letter spacing single
    </span>
  </div>
</DocumentFragment>
`;

exports[`letterSpacing should set a responsive letter spacing property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: -2px;
  -moz-letter-spacing: -2px;
  -ms-letter-spacing: -2px;
  letter-spacing: -2px;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    -webkit-letter-spacing: 3px;
    -moz-letter-spacing: 3px;
    -ms-letter-spacing: 3px;
    letter-spacing: 3px;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
      letter-spacing="-2px,3px"
    >
      letter spacing responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`lineHeight should set a line height property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1rem;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      line height single
    </span>
  </div>
</DocumentFragment>
`;

exports[`lineHeight should set a responsive line height property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    line-height: 1.25rem;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      line height responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`margin should set a margin property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0.125rem;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      margin single
    </span>
  </div>
</DocumentFragment>
`;

exports[`margin should set a responsive margin property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0.25rem;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    margin: 0.5rem;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      margin responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`marginBottom should set a marginBottom property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-bottom: 0.125rem;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      marginBottom single
    </span>
  </div>
</DocumentFragment>
`;

exports[`marginBottom should set a responsive marginBottom property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-bottom: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    margin-bottom: 0.5rem;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      marginBottom responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`marginLeft should set a marginLeft property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-left: 0.125rem;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      marginLeft single
    </span>
  </div>
</DocumentFragment>
`;

exports[`marginLeft should set a responsive marginLeft property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-left: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    margin-left: 0.5rem;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      marginLeft responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`marginRight should set a marginRight property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-right: 0.125rem;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      marginRight single
    </span>
  </div>
</DocumentFragment>
`;

exports[`marginRight should set a responsive marginRight property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-right: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    margin-right: 0.5rem;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      marginRight responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`marginTop should set a marginTop property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-top: 0.125rem;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      marginTop single
    </span>
  </div>
</DocumentFragment>
`;

exports[`marginTop should set a responsive marginTop property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-top: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    margin-top: 0.5rem;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      marginTop responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`padding should set a padding property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0.125rem;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      padding single
    </span>
  </div>
</DocumentFragment>
`;

exports[`padding should set a responsive padding property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0.25rem;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    padding: 0.5rem;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      padding responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`paddingBottom should set a paddingBottom property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-bottom: 0.125rem;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      paddingBottom single
    </span>
  </div>
</DocumentFragment>
`;

exports[`paddingBottom should set a responsive paddingBottom property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-bottom: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    padding-bottom: 0.5rem;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      paddingBottom responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`paddingLeft should set a paddingLeft property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-left: 0.125rem;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      paddingLeft single
    </span>
  </div>
</DocumentFragment>
`;

exports[`paddingLeft should set a responsive paddingLeft property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-left: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    padding-left: 0.5rem;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      paddingLeft responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`paddingRight should set a paddingRight property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-right: 0.125rem;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      paddingRight single
    </span>
  </div>
</DocumentFragment>
`;

exports[`paddingRight should set a responsive paddingRight property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-right: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    padding-right: 0.5rem;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      paddingRight responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`paddingTop should set a paddingTop property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-top: 0.125rem;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      paddingTop single
    </span>
  </div>
</DocumentFragment>
`;

exports[`paddingTop should set a responsive paddingTop property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  padding-top: 0.25rem;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    padding-top: 0.5rem;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      paddingTop responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`textAlign should set a responsive textAlign property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  text-align: center;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    text-align: left;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      textAlign responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`textAlign should set a textAlign property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  text-align: right;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
    >
      textAlign single
    </span>
  </div>
</DocumentFragment>
`;

exports[`textDecoration should set a responsive textDecoration property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media screen and (min-width:25rem) {
  .emotion-0 {
    -webkit-text-decoration: normal;
    text-decoration: normal;
  }
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
      text-decoration="underline,normal"
    >
      textDecoration responsive
    </span>
  </div>
</DocumentFragment>
`;

exports[`textDecoration should set a textDecoration property 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="emotion-1"
  >
    <span
      class="emotion-0"
      color="colorText"
      data-paste-element="TEXT"
      font-size="fontSize30"
      text-decoration="underline"
    >
      textDecoration single
    </span>
  </div>
</DocumentFragment>
`;
